# operating-systems

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  arcport.c  combine.c  file1.per  filter.c  msh.c  out.per  person.h  plane.h  printFile  printFile.c  queue.c  queue.h  resume.air  split.c  statistics  statistics.c  test.per  test1.per
Scripts/: exercise1_a.sh  exercise1_b.sh  exercise2_b.sh  exercise3.sh  exercise4.sh  exercise5_c.sh
pa1/: combine.c  filter.c  split.c  statistics.c
pa2/: msh.c
samples/: personas_1718.per
scripts/: exercise5.sh
